tests/ui/const-generics/defaults/default-param-wf-concrete.next.stderr
error[E0080]: attempt to compute `u8::MAX + 1_u8`, which would overflow
  --> $DIR/default-param-wf-concrete.rs:4:28
   |
LL | struct Foo<const N: u8 = { 255 + 1 }>;
   |                            ^^^^^^^ evaluation of constant value failed here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
